hphp/hack/test/typecheck/expression_trees/nested_expression_trees.php.exp
File "nested_expression_trees.php", line 6, characters 14-14:
A right brace `}` is expected here. (Parsing[1002])
File "nested_expression_trees.php", line 6, characters 18-19:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "nested_expression_trees.php", line 7, characters 1-1:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "nested_expression_trees.php", line 6, characters 10-13:
Unbound name: `Code` (a global constant) (Naming[2049])
File "nested_expression_trees.php", line 6, characters 16-16:
Unbound name: ``` (a global constant) (Naming[2049])
File "nested_expression_trees.php", line 6, characters 10-13:
Unbound global constant (Typing) (Typing[4106])
File "nested_expression_trees.php", line 6, characters 16-16:
Unbound global constant (Typing) (Typing[4106])
