hphp/hack/test/typecheck/expression_trees/nested_expression_trees.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`${ExampleDsl`4`}`;
}
